panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_addition.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_addition.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_addition.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (return (add (add (add 1 1) 1) 2)))))

----- stderr -----
