panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_compound_assignment_evaluates_to_correct_value.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_compound_assignment_evaluates_to_correct_value.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_compound_assignment_evaluates_to_correct_value.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration x~2 `int` 42)
         (return (add-assign (name x~2 `int`) 27l)))))

----- stderr -----
