panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_print_to_stderr.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_print_to_stderr.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_print_to_stderr.c"
   (typedef ptrdiff_t `typeof((subtract (cast `ptr<char>` nullptr) (cast `ptr<char>` nullptr)))`)
   (typedef size_t `typeof((sizeof `char`))`)
   (typedef max_align_t `long long`)
   (typedef wchar_t `int`)
   (typedef nullptr_t `typeof(nullptr)`)
   (declaration write~0 `fn(∅: int, ∅: ptr<void const>, ∅: typeof((sizeof `char`))) -> long` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (return
            (call (name write~0 `fn(∅: int, ∅: ptr<void const>, ∅: typeof((sizeof `char`))) -> long`)
               2
               (string "aaabaaa")
               7)))))

----- stderr -----
